HelloUltraviolet/Fixtures/RejectedSource/Parallelism/DispatchRequiresParallelContext/Expected.uv
//! Expected diagnostic metadata for the DispatchRequiresParallelContext rejected-source specimen.

expectedDiagnostic("E-CON-0140", "requirement.20.DispatchRequiresParallelContext")
